Add Energy Security Study customisations

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Energy Charts",
-  "name": "Energy Charts App",
+  "short_name": "TIM Energy Security 2022",
+  "name": "TIMES-Ireland Energy Security Study 2022",
   "icons": [
     {
       "src": "favicon.ico",
