--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "name": "energy-charts",
-  "version": "0.9.0",
+  "version": "1.0.0",
+  "type": "module",
   "homepage": "https://energy-charts.netlify.app/",
   "bugs": {
     "url": "https://github.com/facilitate-energy/energy-charts/issues"
   },
   "license": "Apache-2.0",
+  "licence-compliance": ["contains EPMG customisation"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/facilitate-energy/energy-charts.git"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.2",
     "export-to-csv": "^1.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-markdown": "^8.0.7",
-    "react-router-dom": "~6.9.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "victory": "^36.6.11",
-    "web-vitals": "^3.4.0"
+    "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "~6.21.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "victory": "^36.7.0",
+    "web-vitals": "^3.5.0"
   },
   "main": "dist/App.js",
   "module": "dist/App.js",
@@ -50,25 +52,26 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@babel/cli": "^7.23.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-format-staged": "^3.0.0",
     "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.4",
+    "jsdom": "^23.0.1",
+    "prettier": "^3.1.1",
+    "vite": "^5.0.10",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^3.2.0",
-    "vitest": "^0.33.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vitest": "^1.1.0"
   }
 }
